Modified add property, edit property. Added modals for delete and interested buttons

--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -26,6 +26,7 @@
       type="image/x-icon"
       href="{{ url_for('static', filename='images/favicon.ico') }}"
     />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css')}}">
 
     <style>
       .bd-placeholder-img {
@@ -112,7 +113,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="d-flex a lign-items-center py-4 bg-body-tertiary">
+  <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main
       class="form-signin w-100 m-auto border bg-white"
       style="border-radius: 15px"
