--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,7 +10,7 @@
     <title>Wizard Realty</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -110,7 +110,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal{{ property.id }}">Edit</button>
-                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="">Interested</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#interestedPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deletePropertyModal">Delete</button>
                               </div>
                             {% if property.is_available %}
@@ -231,57 +231,109 @@
         </div>
       </div>
 
+      <!-- Interested Property Modal-->
+      <div class="modal fade" tabindex="-1" role="dialog" id="interestedPropertyModal">
+        <div class="modal-dialog" role="document" tabindex="-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Interested</h5>
+            </div>
+            <div class="modal-body">
+              <div class="form-floating">
+                <input type="text" class="form-control">
+                <label class="" for="">Client ID</label>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                Cancel
+              </button>
+              <button type="button" class="btn btn-primary">
+                Confirm
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Add Property Modal -->
       <div class="modal fade" id="addPropertyModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-          <div class="modal-content">
+          <div class="modal-content form-signin">
             <div class="modal-header">
-              <h1 class="modal-title fs-5">Add Property</h1>
+              <h1 class="h3 mb-3 fw-bold">Add Property</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-              <form method="POST" enctype="multipart/form-data">
-                <div class="mb-3">
-                  <label for="propertyName" class="col-form-label">Property Name:</label>
-                  <input type="text" class="form-control" id="propertyName" name="propertyName">
-                </div>
-                <div class="mb-3">
-                  <label for="propertyAddress" class="col-form-label">Location Number:</label>
-                  <input type="text" class="form-control" id="propertyAddress" name="propertyLoc">
-                </div>
-                <div class="row mb-3">
-                  <div class="col">
-                    <label for="propertySeller" class="col-form-label">Street Name:</label>
-                    <input type="text" class="form-control" id="propertySeller" name="propertySt">
-                  </div>
-                  <div class="col">
-                    <label for="propertySeller" class="col-form-label">Barangay:</label>
-                    <input type="text" class="form-control" id="propertySeller" name="propertyBrgy">
+            <div class="modal-body form-signin">
+              <form class="needs-validation" novalidate method="POST" enctype="multipart/form-data">
+                <div class="mb-2">
+                  <div class="form-floating">
+                    <input type="text" class="form-control" id="propertyName" name="propertyName">
+                    <label for="propertyName">Property Name</label>
                   </div>
                 </div>
-                <div class="mb-3">
-                  <label for="propertyAddress" class="col-form-label">City:</label>
-                  <input type="text" class="form-control" id="propertyAddress" name="propertyCity">
+                <div class="mb-2">
+                  <div class="form-floating">
+                    <input type="text" class="form-control" id="propertyAddress" name="propertyLoc">
+                    <label for="floatingInputGrid">Location Number</label>
+                  </div>
                 </div>
-                <div class="row mb-3">
+                <div class="row mb-2">
                   <div class="col">
-                    <label for="propertySeller" class="col-form-label">Province:</label>
-                    <input type="text" class="form-control" id="propertySeller" name="propertyProv">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="propertySeller" name="propertySt">
+                      <label for="propertySeller" class="col-form-label">Street Name</label>
+                    </div>
                   </div>
                   <div class="col">
-                    <label for="propertySeller" class="col-form-label">Postal Code:</label>
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="propertySeller" name="propertyBrgy">
+                      <label for="propertySeller" class="col-form-label">Barangay</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="mb-2">
+                  <div class="form-floating">
+                    <input type="text" class="form-control" id="propertyAddress" name="propertyCity">
+                    <label for="propertyAddress" class="col-form-label">City</label>
+                  </div>
+                </div>
+                <div class="row mb-2">
+                  <div class="col">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="propertySeller" name="propertyProv">
+                      <label for="propertySeller" class="col-form-label">Province</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="propertySeller" name="propertyPost">
+                      <label for="propertySeller" class="col-form-label">Postal Code</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-floating">
                     <input type="text" class="form-control" id="propertySeller" name="propertyPost">
+                    <label for="propertySeller" class="col-form-label">Client ID</label>
                   </div>
                 </div>
-                <div class="mb-3">
+                <div class="mb-2">
+                  <label for="propertyStatus" class="col-form-label">Property Type:</label>
+                  <select class="select-form" id="" aria-label="statusSelect" name="propertyStat">
+                    <option selected>Rent</option>
+                    <option value="1">For Sale</option>
+                  </select>
+                </div>
+                <div class="mb-2">
                   <label for="propertyStatus" class="col-form-label">Status:</label>
                   <select class="select-form" id="" aria-label="statusSelect" name="propertyStat">
                     <option selected>Available</option>
                     <option value="1">Unavailable</option>
                   </select>
                 </div>
-                <div class="mb-3">
-                  <label for="propertyImage" class="col-form-label">Insert property image:</label>
+                <div class="mb-2">
+                  <label for="propertyImage" class="col-form-label">Insert property image</label>
                   <input class="form-control" id="propertyImage" type="file" name="file">
                 </div>
                 <div class="modal-footer">
@@ -299,54 +351,81 @@
       {% for address in addresses %}
         <div class="modal fade" id="myModal{{ property.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-              <div class="modal-content">
+              <div class="modal-content form-signin">
                 <div class="modal-header">
                   <h1 class="modal-title fs-5">Edit Property</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <form action="">
-                    <div class="mb-3">
-                      <label for="propertyName" class="col-form-label">Property Name:</label>
-                      <input type="text" class="form-control" id="propertyName" value={{property.name}}>
-                    </div>
-                    <div class="mb-3">
-                      <label for="propertyAddress" class="col-form-label">Location Number:</label>
-                      <input type="text" class="form-control" id="propertyAddress" value={{address.loc_number}}>
-                    </div>
-                    <div class="row mb-3">
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Street Name:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.street_name}}>
-                      </div>
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Barangay:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.barangay}}>
+                    <div class="mb-2">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="propertyName" value={{property.name}}>
+                        <label for="propertyName" class="col-form-label">Property Name</label>
                       </div>
                     </div>
-                    <div class="mb-3">
-                      <label for="propertyAddress" class="col-form-label">City:</label>
-                      <input type="text" class="form-control" id="propertyAddress" value={{address.city}}>
-                    </div>
-                    <div class="row mb-3">
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Province:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.province}}>
-                      </div>
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Postal Code:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.postal_code}}>
+                    <div class="mb-2">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="propertyAddress" value={{address.loc_number}}>
+                        <label for="propertyAddress" class="col-form-label">Location Number</label>
                       </div>
                     </div>
-                    <div class="mb-3">
-                      <label for="propertyStatus" class="col-form-label">Status:</label>
+                    <div class="row mb-2">
+                      <div class="col">
+                        <div class="form-floating">
+                          <input type="text" class="form-control" id="propertySeller" value={{address.street_name}}>
+                          <label for="propertySeller" class="col-form-label">Street Name</label>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-floating">
+                          <input type="text" class="form-control" id="propertySeller" value={{address.barangay}}>
+                          <label for="propertySeller" class="col-form-label">Barangay</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mb-2">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="propertyAddress" value={{address.city}}>
+                        <label for="propertyAddress" class="col-form-label">City</label>
+                      </div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col">
+                        <div class="form-floating">
+                          <input type="text" class="form-control" id="propertySeller" value={{address.province}}>
+                          <label for="propertySeller" class="col-form-label">Province</label>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-floating">
+                          <input type="text" class="form-control" id="propertySeller" value={{address.postal_code}}>
+                          <label for="propertySeller" class="col-form-label">Postal Code</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="form-floating">
+                        <input type="text" class="form-control" id="propertySeller" name="propertyPost">
+                        <label for="propertySeller" class="col-form-label">Client ID</label>
+                      </div>
+                    </div>
+                    <div class="mb-2">
+                      <label for="propertyStatus" class="col-form-label">Property Type:</label>
+                      <select class="select-form" id="" aria-label="statusSelect" name="propertyStat">
+                        <option selected>Rent</option>
+                        <option value="1">For Sale</option>
+                      </select>
+                    </div>
+                    <div class="mb-2">
+                      <label for="propertyStatus" class="col-form-label">Status</label>
                       <select class="select-form" id="" aria-label="statusSelect">
                         <option selected>Available</option>
                         <option value="1">Unavailable</option>
                       </select>
                     </div>
-                    <div class="mb-3">
-                      <label for="propertyImage" class="col-form-label">Insert property image:</label>
+                    <div class="mb-2">
+                      <label for="propertyImage" class="col-form-label">Insert property image</label>
                       <input class="form-control" id="propertyImage" type="file">
                     </div>
                     <div class="modal-footer">
@@ -366,7 +445,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 <script>
