--- a/website/templates/clients.html
+++ b/website/templates/clients.html
@@ -204,37 +204,26 @@
       </div>
     </header>
     <main>
-        <table class="table table-striped table-hover mx-auto" style = "max-width: 800px;">
+        <table class="table table-striped table-hover mx-auto" style="max-width: 800px;">
             <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Client ID</th>
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-              </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Client ID</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>23112673</td>
-                <td>Din</td>
-                <td>Palautog</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>123131</td>
-                <td>Troy</td>
-                <td>Daddy</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>1312321</td>
-                <td>Clint</td>
-                <td>Macho</td>
-              </tr>
+                {% for client in clients %}
+                <tr>
+                    <th scope="row">{{ loop.index }}</th>
+                    <td>{{ client.client_id }}</td>
+                    <td>{{ person.first_name }}</td>
+                    <td>{{ person.last_name }}</td>
+                </tr>
+                {% endfor %}
             </tbody>
-          </table>
-
+        </table>
       <!-- Client Modal -->
       <div class="modal fade" id="addPropertyModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -496,72 +485,6 @@
           </div>
         </div>
       </div>
-      <!-- Edit Property Modal-->
-      {% for property in properties%}
-      {% for address in addresses %}
-        <div class="modal fade" id="myModal{{ property.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h1 class="modal-title fs-5">Edit Property</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <form action="" >
-                    <div class="mb-3">
-                      <label for="propertyName" class="col-form-label">Property Name:</label>
-                      <input type="text" class="form-control" id="propertyName" value={{property.name}}>
-                    </div>
-                    <div class="mb-3">
-                      <label for="propertyAddress" class="col-form-label">Location Number:</label>
-                      <input type="text" class="form-control" id="propertyAddress" value={{address.loc_number}}>
-                    </div>
-                    <div class="row mb-3">
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Street Name:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.street_name}}>
-                      </div>
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Barangay:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.barangay}}>
-                      </div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="propertyAddress" class="col-form-label">City:</label>
-                      <input type="text" class="form-control" id="propertyAddress" value={{address.city}}>
-                    </div>
-                    <div class="row mb-3">
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Province:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.province}}>
-                      </div>
-                      <div class="col">
-                        <label for="propertySeller" class="col-form-label">Postal Code:</label>
-                        <input type="text" class="form-control" id="propertySeller" value={{address.postal_code}}>
-                      </div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="propertyStatus" class="col-form-label">Status:</label>
-                      <select class="select-form" id="" aria-label="statusSelect">
-                        <option selected>Available</option>
-                        <option value="1">Unavailable</option>
-                      </select>
-                    </div>
-                    <div class="mb-3">
-                      <label for="propertyImage" class="col-form-label">Insert property image:</label>
-                      <input class="form-control" id="propertyImage" type="file">
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
-                      <button type="button" class="btn btn-primary">Save</button>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-      {% endfor %}
-      {% endfor %}
     </main>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     <script
@@ -705,65 +628,6 @@
       });
     });
   });
-</script>
-
-<script>
-    $(document).ready(function () {
-        $('#search').on('input', function () {
-            var query = $(this).val();
-
-            $.ajax({
-                url: '/search',
-                type: 'GET',
-                data: { query: query },
-                success: function (response) {
-                    var properties = response.properties;
-                    var propertyHtml = '';
-
-                    for (var i = 0; i < properties.length; i++) { 
-                        propertyHtml += '<div class="album py-2 bg-body-tertiary">';
-                        propertyHtml += '<div class="container">';
-                        propertyHtml += '<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">';
-                        propertyHtml += '<div class="col">';
-                        propertyHtml += '<div class="card shadow-sm">';
-                        // Add your property HTML structure here based on the response
-                        //propertyHtml += '<img class="bd-placeholder-img card-img-top"' //add picture here based on db file 
-                        propertyHtml += '<div class="card-body">';
-                        propertyHtml += '<h2 class="card-title">' + properties[i].name + '</h2>';
-                        propertyHtml += '<p class="card-text"><strong>Seller: </strong>' + properties[i].seller + '</p>';
-                        propertyHtml += '<div class="d-flex justify-content-between align-items-center">';
-                        propertyHtml += '<div class="btn-group">';
-                        propertyHtml += '<button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Edit</button>';
-                        propertyHtml += '<button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>';
-                        propertyHtml += '</div>';
-                        propertyHtml += '<small class="text-body-secondary">Status: ';
-                        if (properties[i].is_available) {
-                            propertyHtml += '<span class="badge rounded-pill text-bg-success">Available</span>';
-                        } else {
-                            propertyHtml += '<span class="badge rounded-pill text-bg-danger">Unavailable</span>';
-                        }
-                        propertyHtml += '</small>';
-
-                        // Adjust the rest of the HTML structure as needed
-                        
-                        propertyHtml += '</div>';
-                        propertyHtml += '</div>';
-                        propertyHtml += '</div>';
-                        propertyHtml += '</div>';
-                        propertyHtml += '</div>';
-                        propertyHtml += '</div>';
-                        propertyHtml += '</div>';
-                        
-                    }
-
-                    $('.row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3').html(propertyHtml);
-                },
-                error: function (error) {
-                    console.log('Error:', error);
-                }
-            });
-        });
-    });
 </script>
   </body>
 </html>
