changes in views.py

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -203,7 +203,7 @@
                 </div>
                 <div class="mb-2">
                   <div class="form-floating">
-                    <input type="text" class="form-control" id="propertyAddress" name="propertyLoc" placeholder="House/Building Number">
+                    <input type="text" class="form-control" id="propertyLoc" name="propertyLoc" placeholder="House/Building Number">
                     <label for="floatingInputGrid">House/Building Number</label>
                   </div>
                 </div>
