modified add to cater to new vars

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -194,7 +194,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body form-signin">
-              <form class="needs-validation" novalidate method="POST" enctype="multipart/form-data">
+              <form class="needs-validation" novalidate method="POST" enctype="multipart/form-data" action="/addproperty">
                 <div class="mb-2">
                   <div class="form-floating">
                     <input type="text" class="form-control" id="propertyName" name="propertyName">
@@ -243,22 +243,22 @@
                 </div>
                 <div class="col">
                   <div class="form-floating">
-                    <input type="text" class="form-control" id="propertySeller" name="propertyPost">
+                    <input type="text" class="form-control" id="propertySeller" name="propertyCD">
                     <label for="propertySeller" class="col-form-label">Client ID</label>
                   </div>
                 </div>
                 <div class="mb-2">
                   <label for="propertyStatus" class="col-form-label">Property Type:</label>
-                  <select class="select-form" id="" aria-label="statusSelect" name="propertyStat">
+                  <select class="select-form" id="" aria-label="statusSelect" name="propertyType">
                     <option selected>Rent</option>
-                    <option value="1">For Sale</option>
+                    <option>For Sale</option>
                   </select>
                 </div>
                 <div class="mb-2">
                   <label for="propertyStatus" class="col-form-label">Status:</label>
                   <select class="select-form" id="" aria-label="statusSelect" name="propertyStat">
                     <option selected>Available</option>
-                    <option value="1">Unavailable</option>
+                    <option>Unavailable</option>
                   </select>
                 </div>
                 <div class="mb-2">
