--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -100,7 +100,6 @@
             <button type="button" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#addPropertyModal">Add Property</button>
           </div>
         </div>
-      </div>
     </header>
     <main>
 
@@ -115,7 +114,11 @@
                         <img class="bd-placeholder-img card-img-top" src="{{ url_for('static', filename='images/property_imgs/'~property.bg_image)}}" width="100%" height="225" alt="{{property.bg_image}}" id="image">
                         <div class="card-body">
                             <h2 class="card-title">{{ property.name }}</h2>
-                            <p class="card-text"><strong>Seller: </strong>Din Shane Magallanes</p>
+                            {% if first[loop.index - 1] != null %}
+                                <p class="card-text"><strong>Seller: </strong>{{ first[loop.index - 1]~' '~last[loop.index - 1] }}</p>
+                            {% else %}
+                                <p class="card-text"><strong>Seller: </strong></p>
+                            {% endif %}
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal{{ property.id }}">Edit</button>
