Fixed edit property modal

--- a/website/static/css/register.css
+++ b/website/static/css/register.css
@@ -39,7 +39,7 @@ body {
   height:58px;
 }
 
-.form-signin select[name="availability"]{
+.form-signin select[name="propertyStat"]{
   height:58px;
 }
 
